fix: tabs layout shift

--- a/core/src/components/cat-tabs/cat-tabs.scss
+++ b/core/src/components/cat-tabs/cat-tabs.scss
@@ -44,18 +44,6 @@
     height: 2px;
   }
 
-  &::before {
-    content: attr(data-text);
-    content: attr(data-text) / '';
-    height: 0;
-    visibility: hidden;
-    overflow: hidden;
-    -webkit-user-select: none;
-    user-select: none;
-    pointer-events: none;
-    font-weight: 700;
-  }
-
   &:hover::after {
     opacity: 0.25;
   }
